--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "engines":{
+  "engines": {
     "node": "16.13.0"
   },
   "private": true,
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
