--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,20 @@
   },
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "cdbreact": "^1.5.3",
     "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
