--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js react-scripts start",
+    "dev": "nodemon index",
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
